--- a/index.html
+++ b/index.html
@@ -224,55 +224,55 @@
           </li>
         </ul>
       </div>
-      <div class="lever">
-        <div class="lever-pro">
-          <img
-            src="/images_advanced/collection-item1.jpg"
-            alt=""
-            class="lever-img"
-          />
-          <div class="lever-text">
-            <p>CASUAL COLLECTION</p>
-            <h2>Street Wear.</h2>
-            <p>
-              Lorem ipsum dolor sit amet,<br />
-              consectetur adipiscing elit <br />
-              Dignissim massa diam elementum.
-            </p>
-            <button class="lever-button">
-              Shop Collection<ion-icon name="arrow-forward-outline"></ion-icon>
-            </button>
+      <div class="collection">
+        <div class="collection-container">
+          <div class="collection-grid-container">
+            <div class="collection-grid-item">
+              <img src="/images_advanced/collection-item1.jpg" alt="" />
+              <div class="collection-grid-large">
+                <span class="collection-style">Casual Style</span>
+                <h3 class="collection-title">Street Wear</h3>
+                <p class="desc">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Recusandae consequatur obcaecati quam architecto saepe
+                  incidunt doloribus perferendis est inventore veritatis.
+                </p>
+                <a href="#!" class="collection-shop"
+                  >Shop collection<ion-icon
+                    name="arrow-forward-outline"
+                  ></ion-icon
+                ></a>
+              </div>
+            </div>
+            <div class="collection-grid-item">
+              <div class="collection-grid-itemm">
+              <img src="/images_advanced/collection-item2.jpg" alt="" />
+              <div class="collection-grid-smalla">
+                <span class="collection-small-stylee">BASIC COLLECTION</span>
+                <h3 class="collection-small-titlee">Basic Shoes.</h3>
+                <a href="" class="collection-smaill-shopp"
+                  >Shop Collection<ion-icon
+                    name="arrow-forward-outline"
+                  ></ion-icon
+                ></a>
+              </div>
+              </div>
+              <div class="collection-grid-small">
+                <img src="/images_advanced/collection-item3.jpg" alt="" />
+                <div class="collection-grid-smalll">
+                  <span class="collection-small-style"
+                    >BEST SELLING PRODUCT</span
+                  >
+                  <h3 class="collection-small-title">Basic Shoes.</h3>
+                  <a href="" class="collection-smaill-shop"
+                    >Shop Collection<ion-icon
+                      name="arrow-forward-outline"
+                    ></ion-icon
+                  ></a>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="lever-pro">
-          <img
-            src="/images_advanced/collection-item2.jpg"
-            alt=""
-            class="lever-img"
-          />
-          <div class="lever-text">
-            <p>BASIC COLLECTION</p>
-            <h2>Basic Shoes.</h2>
-            <button class="lever-button">
-              Shop Collection<ion-icon name="arrow-forward-outline"></ion-icon>
-            </button>
-          </div>
-        </div>
-      
-      <div class="lever-pro">
-        <img
-          src="/images_advanced/collection-item3.jpg"
-          alt=""
-          class="lever-img"
-        />
-        </div>
-
-        <div class="lever-text">
-          <p>BEST SELLING PRODUCT</p>
-          <h2>Woolen Hat.</h2>
-          <button class="lever-button">
-            Shop Collection<ion-icon name="arrow-forward-outline"></ion-icon>
-          </button>
         </div>
       </div>
       <footer>
@@ -305,15 +305,17 @@
               <a>Do you have any questions of suggestions?</a><br />
               <a href="/terms"> ousservices@ultras.com</a><br />
               <a>Do you need assistance? Give us a call</a><br />
-              <a><b>+57 444 11 00 35</b></a><br />
-              
+              <a><b>+57 444 11 00 35</b></a
+              ><br />
             </div>
           </div>
           <div class="footer-text">
             <h4>Forever 2018</h4>
             <div>
-              <a>Cras mattis sit ornare in metus eu <br>
-                amet adipiscing enim </a><br />
+              <a
+                >Cras mattis sit ornare in metus eu <br />
+                amet adipiscing enim </a
+              ><br />
               <a>Ullamcorper in orci, ultrices</a><br />
               <a>dignissim lacus, lacus sagittls</a><br />
               <a>dictumst</a><br />
